--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,7 +3,7 @@
         <div class="container" >
                 <div class="row"  >
                      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 logo-wrapper">
-                         <img src="/img/logo.png" alt="" />
+                         <img src="http://i.imgur.com/Lj4DLLF.png" alt="" />
                      </div>
                       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-right" >
                           <div class="menu-links scroll-me">
@@ -28,15 +28,12 @@
             <div class="container">
                 <div class="row scroll-me" >
                       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                          <h1 >Wonder Landing Page</h1>
+                          <h1 >Xstars Landing Page</h1>
                     <h4>
-                        Consectetur adipiscing elit felis dolor felis dolor vitae.
-                        Eelit felis dolor vitae  adipiscing elit felis dolor felis dolor vitae.
-                        Eelit felis dolor vitae
-
+                        
                     </h4>
-                    <a href="#about" class="btn btn-custom btn-two" >Explore Template</a>
-                    <a href="#email-subscribe" class="btn btn-custom btn-one" >Subscribe Right Now </a>
+                    <a href="#about" class="btn btn-custom btn-two" >Rank Manager</a>
+                    <a href="#email-subscribe" class="btn btn-custom btn-one" >Commuter</a>
                 </div>
                 </div>
               
@@ -51,51 +48,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <h2 class="head-line">What Worth Here & Why  ?</h2>
-                    <p >
-                       Morbi mollis lectus et ipsum sollicitudin varius.
-                         Aliquam tempus ante placerat, consectetur tellus nec, porttitor nulla.
-                         Maecenas a quam erat. Praesent vehicula ut magna sit amet ultrices.
-                    </p>
-                    <div class="row text-center">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <div class="row pad-bottom">
-                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                             <div class="icon-wrapper">
-                                  <i class="ion-tshirt-outline"></i>
-                             </div>                   
-                    <h4>Responsive Design </h4>
-                                        Consectetur adipiscing elit felis dolor .
-
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <div class="icon-wrapper">
-                    <i class="ion-monitor"></i>
-                        </div>
-                    <h4>Awesome Features  </h4>
-                                      Consectetur adipiscing elit felis dolor .
-
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <div class="icon-wrapper">
-                    <i class="ion-clipboard"></i>
-                        </div>
-                    <h4>Multipurpose Use</h4>
-                    Consectetur adipiscing elit felis dolor .
-                </div>
-                        </div>
-                        
-            </div>
-                
-        </div>
-                    
-                </div>
-                
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center" >
-                    <img src="/img/phone.png" class="img-side" alt="" />
-                </div>
-            </div>
-        </div>
+                <div class="panel panel-default">
+    <!-- Default panel contents -->
+    <div class="panel-heading">
+    <form class="searchform cf">
+  <input type="text" placeholder="Is it me you’re looking for?">
+  <button type="submit">Search</button>
+</form>
+    </div>
+   <a class="folder">
+            <i class="fa  fa-folder-open-o  fa-lg"></i>
+            <span>Taxi Information</span>
+          </a>          
     </section>
     <!-- ABOUT SECTION END-->
      <!-- CLIENTS SECTION START-->
